--- a/data/benefits/javascript/caf-guyane-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-guyane-aide-bafa-approfondissement.yml
@@ -1,9 +1,9 @@
-label: aide au BAFA
+label: aide au BAFA pour une session d'approfondissement
 institution: caf_guyane
-description: L'aide à la formation du BAFA est une aide locale mise à
-  disposition par la CAF de Guyane pour vous aider à financer votre session de
-  base et de perfectionnement en complément de l'aide nationale apportée par la
-  CAF.
+description: L’aide à la formation du BAFA est une aide locale de 200 € mise à
+  disposition par la CAF de la Guyane pour vous aider à financer votre
+  session d’approfondissement ou de qualification, en complément de l'aide nationale
+  apportée par la CAF.
 prefix: l’
 conditions_generales:
   - type: age
@@ -14,7 +14,7 @@ conditions_generales:
       - "973"
 profils: []
 conditions:
-  - Le délai entre la 1ère et la dernière session ne peut être supérieur à 18
+  - Le délai entre la 1ère et la dernière session ne peut être supérieur à 30
     mois.
   - La demande doit parvenir à la CAF dans un délai de 3 mois, suite à la
     dernière session.
@@ -22,7 +22,7 @@ interestFlag: _interetBafa
 type: float
 unit: €
 periodicite: ponctuelle
-montant: 491
-link: https://www.caf.fr/allocataires/caf-de-la-guyane/offre-de-service/vie-professionnelle/aide-au-brevet-d-aptitude-aux-fonctions-d-animation-bafa
+montant: 200
+link: https://www.caf.fr/allocataires/caf-de-la-guyane/offre-de-service/vie-personnelle/aide-au-brevet-d-aptitude-aux-fonctions-d-animation-bafa-aide-complementaire
 form: https://www.caf.fr/sites/default/files/medias/973/Offre%20de%20service/Vie%20professionnelle/Formulaire%20bafa.pdf
-instructions: https://www.caf.fr/allocataires/caf-de-la-guyane/offre-de-service/vie-professionnelle/aide-au-brevet-d-aptitude-aux-fonctions-d-animation-bafa
+instructions: https://www.caf.fr/allocataires/caf-de-la-guyane/offre-de-service/vie-personnelle/aide-au-brevet-d-aptitude-aux-fonctions-d-animation-bafa-aide-complementaire
