--- a/data/benefits/javascript/caf-seine-st-denis-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-seine-st-denis-aide-bafa-approfondissement.yml
@@ -2,8 +2,9 @@ label: aide au BAFA pour une session d'approfondissement
 institution: caf_seine_st_denis
 description: L’aide à la formation du BAFA est une aide locale de 200 € mise à
   disposition par la CAF de Seine-Saint-Denis pour vous aider à financer votre
-  session d’approfondissement ou de qualification. Cette aide est majorée de 100 €
-  si la session d’approfondissement porte sur le handicap ou sur la citoyenneté.
+  session d’approfondissement ou de qualification, en complément de l'aide nationale
+  apportée par la CAF. Cette aide est majorée de 100 € si la session d’approfondissement
+  porte sur le handicap ou sur la citoyenneté.
 conditions_generales:
   - type: age
     operator: ">="
