--- a/.github/workflows/check-links-validity.yaml
+++ b/.github/workflows/check-links-validity.yaml
@@ -1,6 +1,7 @@
 name: Check links validity
 on:
   workflow_dispatch:
+  pull_request:
   schedule:
     # https://crontab.guru/#30_8_*_*_*
     - cron: "30 8 * * *"
