--- a/data/benefits/javascript/caf-guyane-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-guyane-aide-bafa-approfondissement.yml
@@ -1,8 +1,8 @@
-label: aide au BAFA pour une session d'approfondissement
+label: aide au BAFA pour une session de formation générale et d'approfondissement
 institution: caf_guyane
-description: L’aide à la formation du BAFA est une aide locale de 200 € mise à
-  disposition par la CAF de la Guyane pour vous aider à financer votre
-  session d’approfondissement ou de qualification, en complément de l'aide nationale
+description: L’aide à la formation du BAFA est une aide locale de 200 € par
+  session théorique (formation générale et formation d'approfondissement),
+  mise à disposition par la CAF de la Guyane en complément de l'aide nationale
   apportée par la CAF.
 prefix: l’
 conditions_generales:
@@ -22,7 +22,7 @@ interestFlag: _interetBafa
 type: float
 unit: €
 periodicite: ponctuelle
-montant: 200
+montant: 400
 link: https://www.caf.fr/allocataires/caf-de-la-guyane/offre-de-service/vie-personnelle/aide-au-brevet-d-aptitude-aux-fonctions-d-animation-bafa-aide-complementaire
 form: https://www.caf.fr/sites/default/files/medias/973/Offre%20de%20service/Vie%20professionnelle/Formulaire%20bafa.pdf
 instructions: https://www.caf.fr/allocataires/caf-de-la-guyane/offre-de-service/vie-personnelle/aide-au-brevet-d-aptitude-aux-fonctions-d-animation-bafa-aide-complementaire
