--- a/data/benefits/javascript/ville_colomiers_bourse_permis_conduire.yml
+++ b/data/benefits/javascript/ville_colomiers_bourse_permis_conduire.yml
@@ -18,7 +18,7 @@ conditions_generales:
 profils:
   - type: chomeur
   - type: beneficiaire_rsa
-  - type: autre
+  - type: inactif
 conditions:
   - Être déscolarisé.e.s sans diplôme et en situation d’insertion professionnelle.
   - Être accompagné par la mission locale.
