--- a/data/benefits/javascript/ville_colomiers_bourse_permis_conduire.yml
+++ b/data/benefits/javascript/ville_colomiers_bourse_permis_conduire.yml
@@ -29,4 +29,4 @@ unit: €
 periodicite: ponctuelle
 montant: 500
 link: https://www.ville-colomiers.fr/mon-quotidien/jeunesse/permis-jeunes-citoyens-405.html
-instruction: https://www.ville-colomiers.fr/mon-quotidien/jeunesse/permis-jeunes-citoyens-405.html
+instructions: https://www.ville-colomiers.fr/mon-quotidien/jeunesse/permis-jeunes-citoyens-405.html
