Corrige coquille professionnalisation

--- a/data/benefits/javascript/ville_anzin_aide_au_permis_de_conduire.yml
+++ b/data/benefits/javascript/ville_anzin_aide_au_permis_de_conduire.yml
@@ -17,7 +17,7 @@ profils:
   - type: beneficiaire_rsa
   - type: inactif
   - type: service_civique
-  - type: professionalisation
+  - type: professionnalisation
   - type: apprenti
 conditions:
   - Être suivi par la Mission Locale ou le service Emploi de la Mairie, si vous avez moins de 26 ans.
