--- a/data/benefits/javascript/ville_anzin_aide_au_permis_de_conduire.yml
+++ b/data/benefits/javascript/ville_anzin_aide_au_permis_de_conduire.yml
@@ -4,7 +4,7 @@ description:
   La municipalité d'Anzin propose une aide au permis de 800€. 30 personnes sont
   susceptibles d'en bénéficier chaque année. Les demandes sont soumises à
   l'approbation d'une commission d'attribution
-prefix: l'
+prefix: l’
 conditions_generales:
   - type: communes
     values:
