--- a/data/benefits/javascript/ville_ajaccio_bourse_au_permis_de_conduire.yml
+++ b/data/benefits/javascript/ville_ajaccio_bourse_au_permis_de_conduire.yml
@@ -24,7 +24,9 @@ voluntary_conditions:
   - Réaliser 30 heures de bénévolat dans un organisme à but non lucratif basé à Ajaccio.
 interestFlag: _interetPermisDeConduire
 type: float
-unit: ""
+montant: 20
+unit: "séances"
+legend: "de conduite"
 periodicite: ponctuelle
 link: https://www.ajaccio.fr/Bourse-au-permis-2023-20-heures-de-conduite-gratuites-pour-24-jeunes-Ajacciens-_a10872.html
 instructions: https://www.ajaccio.fr/Bourse-au-permis-2023-20-heures-de-conduite-gratuites-pour-24-jeunes-Ajacciens-_a10872.html
