--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,11 @@
 name: "Continuous Deployment"
 on:
+  workflow_dispatch:
   push:
     branches: [master, dev]
+concurrency:
+  concurrency: ci-${{ github.ref }}
+
 env:
   EQUINOXE_SSH_HOST: equinoxe.mes-aides.1jeune1solution.beta.gouv.fr
   EQUINOXE_SSH_USER: debian
