remplace 3ème pers par 2ème sur l'aide au permis de colomiers

--- a/data/benefits/javascript/ville_colomiers_bourse_permis_conduire.yml
+++ b/data/benefits/javascript/ville_colomiers_bourse_permis_conduire.yml
@@ -22,7 +22,7 @@ profils:
 conditions:
   - Être déscolarisé.e.s sans diplôme et en situation d’insertion professionnelle.
   - Être accompagné par la mission locale.
-  - S'engager à réaliser 70 heures de stage au sein des services municipaux.
+  - Vous engager à réaliser 70 heures de stage au sein des services municipaux.
 interestFlag: _interetPermisDeConduire
 type: float
 unit: €
