remplace 3ème pers par 2ème sur l'aide au permis de Béthune

--- a/data/benefits/javascript/ville-bethune-aide-permis.yml
+++ b/data/benefits/javascript/ville-bethune-aide-permis.yml
@@ -18,7 +18,7 @@ conditions:
   - Être Béthunois depuis au moins un an à la date du dépôt de dossier.
   - Avoir une situation sociale, professionnelle ou scolaire visant à l’insertion.
   - Avoir un projet dans lequel s’inscrit le besoin de passer le permis de conduire.
-  - Avoir effectué sa journée de défense et de citoyenneté (JDC), pour les personnes âgées
+  - Avoir effectué votre journée de défense et de citoyenneté (JDC), pour les personnes âgées
     de moins de 25 ans.
   - Être titulaire de l'ASSR2, pour les personnes âgées de moins de 21 ans.
 voluntary_conditions:
