remplace 3ème pers par 2ème sur l'aide au permis de Chaume en Retz

--- a/data/benefits/javascript/ville-chaumes-en-retz-bourse-communale-au-permis-de-conduire-et-au-bsr.yml
+++ b/data/benefits/javascript/ville-chaumes-en-retz-bourse-communale-au-permis-de-conduire-et-au-bsr.yml
@@ -21,7 +21,7 @@ conditions_generales:
 profils: []
 conditions:
   - Avoir un projet scolaire ou professionnel.
-  - S'inscrire dans l'auto-école de la commune.
+  - Être inscrit dans l'auto-école de la commune.
 interestFlag: _interetPermisDeConduire
 type: float
 unit: €
