remplace 3ème pers par 2ème sur l'aide au permis de Nice

--- a/data/benefits/javascript/ville-nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/ville-nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
@@ -21,7 +21,7 @@ conditions:
   - Être non-imposable.
   - Avoir préalablement réussi le code de la route.
 voluntary_conditions:
-  - S’engager à la réalisation de 30 heures de bénévolat dans un service public
+  - Réaliser 30 heures de bénévolat dans un service public
     ou un organisme à but non lucratif.
 interestFlag: _interetPermisDeConduire
 type: float
