Remplace la 3ème personne par 2ème sur l'aide au permis de Vertou

--- a/data/benefits/javascript/ville-vertou-bourse-communale-permis-de-conduire.yml
+++ b/data/benefits/javascript/ville-vertou-bourse-communale-permis-de-conduire.yml
@@ -17,7 +17,7 @@ conditions_generales:
 profils: []
 conditions:
   - Effectuer la demande de bourse avant le 20 novembre.
-  - Effectuer sa demande de bourse avant de commencer le permis.
+  - Effectuer la demande de bourse avant de commencer le permis.
 voluntary_conditions:
   - Réaliser 50 heures d'action bénévole dans une association basée à
     Vertou.
