config: lance l'étape de build plus tôt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
         run: npm run test
   build:
     name: Build
-    needs: [install, check_data_file_consistency]
+    needs: [install]
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
