--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:server": "tsc -p tsconfig.server.json",
     "preview": "vite preview",
     "lint": "eslint backend data iframes lib src --ext ts,js,vue --max-warnings 0",
-    "ci": "cd dist-server && NODE_ENV=production node ./backend/server.js",
+    "ci": "NODE_ENV=production node ./dist-server/backend/server.js",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
     "db": "mongod --dbpath db",
@@ -27,7 +27,7 @@
     "prestart": "npm run build && npm run stats",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "start": "cd dist-server && NODE_ENV=production node ./backend/server.js",
+    "start": "NODE_ENV=production node ./dist-server/backend/server.js",
     "stats": "ts-node ./backend/lib/stats",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_PATH=. jest --testTimeout=20000",
     "tools:check-links-validity": "ts-node ./tools/check-links-validity.ts",
