--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
       - name: Cache NPM install files
         uses: actions/cache@v3
         id: restore-npm-install-packages
@@ -37,7 +34,7 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Check tool versions
-        run: npm --version && node --version && python3 --version
+        run: npm --version && node --version
       - name: Install dependencies
         if: steps.restore-dependencies.outputs.cache-hit != 'true'
         run: npm ci --prefer-offline --no-audit
@@ -116,7 +113,7 @@ jobs:
         run: npm run test
   build:
     name: Build
-    needs: [install, check_data_file_consistency]
+    needs: [install]
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -225,7 +222,7 @@ jobs:
     timeout-minutes: 15
     services:
       mongodb:
-        image: mongo:4.0.27
+        image: mongo:6.0.8
         ports:
           - 27017:27017
     strategy:
