corrige coquille sur l'aide des pyrénées orientales

--- a/data/benefits/javascript/pyrenees-orientales-financement-permis.yml
+++ b/data/benefits/javascript/pyrenees-orientales-financement-permis.yml
@@ -12,6 +12,7 @@ conditions_generales:
   - type: age
     operator: ">="
     value: 19
+  - type: age
     operator: <=
     value: 25
   - type: departements
