--- a/data/benefits/javascript/pyrenees-orientales-financement-permis.yml
+++ b/data/benefits/javascript/pyrenees-orientales-financement-permis.yml
@@ -1,6 +1,7 @@
 label: aide au financement du permis de conduire
 institution: departement_des_pyrenees_orientales
-description: Le Département des Pyrénées-orientales soutient les jeunes dans leurs projets
+description:
+  Le Département des Pyrénées-orientales soutient les jeunes dans leurs projets
   d’autonomie et de mobilité, à travers l’attribution d’une aide pour financer des heures de conduite.
   Pour tout complément d’information, contactez le Service Jeunesse au 04 68 52 98 36 ou
   le Bureau Information Jeunesse au 04 68 34 56 56, ou envoyez un mail à permisjeunesse@cd66.fr
