Corrige coquille dans le titre de l'aide au permis de l'Aude

--- a/data/benefits/javascript/departement_aude-aide-departementale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/departement_aude-aide-departementale-au-permis-de-conduire.yml
@@ -1,4 +1,4 @@
-label: fonds d'aide au jeunes mobilité
+label: fonds d'aide aux jeunes mobilité
 institution: departement_aude
 description: Le Département aide les jeunes qui ont des problèmes
   financiers ou d’insertion et qui ont un projet professionnel (contrat
