Corrige coquille dans les conditions (oubli d'un point)

--- a/data/benefits/javascript/departement_ardeche_aide_au_permis_de_conduire.yml
+++ b/data/benefits/javascript/departement_ardeche_aide_au_permis_de_conduire.yml
@@ -41,7 +41,7 @@ conditions:
   - Avoir un projet d'emploi ou de formation validé par un référent Mission Locale
     (une formation continue ou en apprentissage, un stage dans le cadre d’une formation
     ou d’une recherche d’emploi, un premier emploi ou un emploi aidé depuis moins de 3 mois,
-    un parcours garantie jeunes ou un service civique.)
+    un parcours garantie jeunes ou un service civique).
 voluntary_conditions:
   - "Être engagé dans une mission bénévole de 10 à 20 heures auprès d’un
     organisme d'intérêt général."
