Skip unit test sur une aide pré-remplie DS

--- a/data/benefits/openfisca/carte_sncf_eleve_apprenti_eligibilite.yml
+++ b/data/benefits/openfisca/carte_sncf_eleve_apprenti_eligibilite.yml
@@ -7,13 +7,14 @@ description: Vous êtes élève de moins de 21 ans, étudiant de moins de 26 ans
 conditions:
   - Demander la carte directement dans la boutique SNCF de votre choix.
 link: https://www.sncf.com/fr/offres-voyageurs/cartes-tarifs-grandes-lignes/eleves-apprentis
-instructions: https://www.sncf.com/fr/offres-voyageurs/cartes-tarifs-grandes-lignes/eleves-apprentis
 teleservice:
   name: redirection
   query:
     vers: ds?procedure=abonnement-aeea-dgitm
+instructions: https://www.sncf.com/fr/offres-voyageurs/cartes-tarifs-grandes-lignes/eleves-apprentis
 prefix: la
 type: bool
 periodicite: annuelle
 entity: individus
 openfiscaPeriod: thisMonth
+skip_schema_check: true
