--- a/data/benefits/openfisca/crous_aide_100_repas_gratuits.yml
+++ b/data/benefits/openfisca/crous_aide_100_repas_gratuits.yml
@@ -9,7 +9,7 @@ conditions:
     supérieur, de la recherche et de l’innovation sur le territoire des Hauts-de-France, ou inscrits dans un établissement dispensant une formation
     sanitaire ou sociale gérée par la Région.
   - Être boursier du Crous ou de la Région Hauts-de-France à l’un des échelons de bourse (3, 4, 5, 6, ou 7), ou signalé par le service social du Crous.
-  - Être inscrit dans un établissement autre qu'un lycée (sont exclus les étudiants dont l’établissement d’inscription est un lycée comme les étudiants en BTS ou CPGE)
+  - Être inscrit dans un établissement autre qu'un lycée (sont exclus les étudiants dont l’établissement d’inscription est un lycée comme les étudiants en BTS ou CPGE).
 periodicite: ponctuelle
 link: https://www.ij-hdf.fr/actualite/747/100-repas-gratuits-de-nouveau-attribues-aux-etudiants-boursiers-echelon-3-a-7#:~:text=Le%20Conseil%20R%C3%A9gional%20Hauts-de,en%20restos
 instructions: https://www.ij-hdf.fr/actualite/747/100-repas-gratuits-de-nouveau-attribues-aux-etudiants-boursiers-echelon-3-a-7#:~:text=Le%20Conseil%20R%C3%A9gional%20Hauts-de,en%20restos
