--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -760,6 +760,17 @@ fields:
           '\.$',
           "La condition doit commencer par un verbe à l'infinitif et se terminer par un point",
         ]
+  field_teleservice_prefill: &field_teleservice_prefill
+    name: teleservicePrefill
+    widget: hidden
+    fields:
+      - widget: text
+        name: name
+      - widget: object
+        name: query
+        fields:
+          - name: vers
+            widget: string
   # champs propre aux aides javascript
   field_general_conditions: &field_general_conditions
     label: Conditions générales à satisfaire simultanément
@@ -865,6 +876,7 @@ collections:
       - *field_benefit_partial_support
       - *field_benefit_id
       - *field_benefit_source
+      - *field_teleservice_prefill
   - name: benefits_openfisca
     label: Aides complexes
     label_singular: Aide complexe
@@ -908,6 +920,7 @@ collections:
       - *field_benefit_set_to_zero_recently
       - *field_benefit_capital_dependant
       - *field_benefit_openfisca_mapping
+      - *field_teleservice_prefill
   - name: institutions
     label: Institutions
     label_singular: institution
