--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -29,8 +29,7 @@ unit: €
 periodicite: autre
 montant: 300
 link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafa
-teleservice:
+teleservicePrefill:
   name: redirection
   query:
     vers: ds?procedure=cd53-bafa
-skip_schema_check: true
