--- a/data/benefits/javascript/departement_mayenne-aide-au-bafd.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafd.yml
@@ -19,9 +19,8 @@ unit: €
 periodicite: autre
 montant: 450
 link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafd
-teleservice:
+teleservicePrefill:
   name: redirection
   query:
     vers: ds?procedure=cd53_dat_bafd
 instructions: https://www.lamayenne.fr/service/aide-pour-passer-le-bafd
-skip_schema_check: true
