Améliore l'écriture épicène de deux aides de la région Grand Est.

--- a/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
@@ -1,13 +1,11 @@
 label:
-  aide à la mobilité internationale des étudiants et étudiantes en formation sanitaire
-  et sociale
+  aide à la mobilité internationale des formations sanitaire et sociale
 institution: grand_est
-description: Cette aide vise à favoriser la mobilité internationale des élèves
-  et étudiants et étudiantes en formation dans les instituts de formations sanitaire et
-  sociale de la région Grand Est. Ce dispositif peut s’appliquer en complément
-  d’une aide à la mobilité ERASMUS +.
+description: Cette aide vise à favoriser la mobilité internationale des personnes
+  inscites dans les instituts de formations sanitaire et sociale de la région Grand Est.
+  Ce dispositif peut s’appliquer en complément d’une aide à la mobilité ERASMUS +.
 conditions:
-  - Être inscrit ou inscrite dans un institut de formations sanitaires ou sociales agréé
+  - Être inscrit ou inscrite dans un institut de formation sanitaire ou sociale agréé
     par la Région Grand Est (hors IBODE, IADE et Cadre de santé).
   - Ne pas être salarié ou salariée (promotion professionnelle CIF, apprentis).
   - Souhaiter effectuer une période d’études ou de stage d’une durée minimale de
