--- a/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
@@ -1,8 +1,8 @@
-label:
-  aide à la mobilité internationale des formations sanitaire et sociale
+label: aide à la mobilité internationale des formations sanitaire et sociale
 institution: grand_est
-description: Cette aide vise à favoriser la mobilité internationale des personnes
-  inscites dans les instituts de formations sanitaire et sociale de la région Grand Est.
+description:
+  Cette aide vise à favoriser la mobilité internationale des personnes
+  inscrites dans les instituts de formations sanitaire et sociale de la région Grand Est.
   Ce dispositif peut s’appliquer en complément d’une aide à la mobilité ERASMUS +.
 conditions:
   - Être inscrit ou inscrite dans un institut de formation sanitaire ou sociale agréé
