--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -29,7 +29,4 @@ unit: €
 periodicite: autre
 montant: 300
 link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafa
-teleservicePrefill:
-  name: redirection
-  query:
-    vers: ds?procedure=cd53-bafa
+teleservicePrefill: ds?procedure=cd53-bafa
