--- a/data/benefits/openfisca/saint_louis_eligibilite_residence.yml
+++ b/data/benefits/openfisca/saint_louis_eligibilite_residence.yml
@@ -3,10 +3,7 @@ institution: ville_saint_louis
 description: Le centre communal d'action sociale de Saint-Louis vous accompagne au quotidien dans vos démarches de demandes d'aides. Les informations que vous avez intégrées dans le simulateur seront automatiquement pré-remplies dans le formulaire du centre communal d'action sociale.
 prefix: un
 link: https://saintlouis.re/solidarite/117-ccas
-teleservicePrefill:
-  name: redirection
-  query:
-    vers: ccas_saint_louis_preprod
+teleservicePrefill: ccas_saint_louis_preprod
 type: bool
 entity: menages
 openfiscaPeriod: thisMonth
