--- a/data/benefits/openfisca/bourse_college.yml
+++ b/data/benefits/openfisca/bourse_college.yml
@@ -3,8 +3,8 @@ institution: education_nationale
 description: >
   La bourse de collège est une aide destinée à favoriser la scolarité des collégiens. Elle est versée aux familles ayant de faibles ressources. Son montant dépend du nombre d’enfants à charge.
 conditions:
-  - Déposer votre dossier à partir de l’été 2022 pour l’année scolaire 2022-2023.
-  - Pour les élèves scolarisés en collège public, la demande se fait en ligne sur le portail Scolarité Services de votre établissement.
+  - Déposer votre demande entre le 1er septembre et le 19 octobre.
+  - Pour les élèves scolarisés en collège public, la demande se fait en ligne sur le portail Educonnect.
 link: https://www.service-public.fr/particuliers/vosdroits/F984
 instructions: http://www.education.gouv.fr/cid117994/scolarite-services-aide-a-la-premiere-connexion-des-parents.html
 isBaseRessourcesYearMinusTwo: true
