Met à jour l'aide ordinateur de la région BFC

--- a/data/benefits/javascript/region-bourgogne-franche-comte-ordil.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-ordil.yml
@@ -1,8 +1,8 @@
 label: oRDIL - Prêt d'ordinateurs aux lycéens
 institution: region_bourgogne_franche_comte
 description: La Région Bourgogne-Franche-Comté met à disposition des lycées
-  publics et privés 6 000 ordinateurs portables de prêt pour l'année scolaire
-  2021-2022. Les ordinateurs sont attribués aux lycéens ou lycéennes qui en ont le plus
+  publics et privés 6 000 ordinateurs portables de prêt pour l'année scolaire.
+  Les ordinateurs sont attribués aux lycéens ou lycéennes qui en ont le plus
   besoin.
 conditions_generales:
   - type: regions
