Met à jour la logique de contrôle des aides (#4009)
* chore: modifie le nom du champ de téléservice de préremplissage

* update: modifie la logique liée aux téléservices pré-remplis

* chore: passe une valeur d'enum au lieu d'une string

* update: complète l'interface StandardBenefit

* update: supprime les références à skip_schema_check

* chore: met à jour l'aide carte sncf apprenti après rebase

* update: refacto du champ teleservicePrefill

* fix: prend en compte le nouveau format du paramètre teleservicePrefill

* update: ajout d'un bouton dédié au téléservice pré-rempli

* update: supprime le v-else-if

--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -29,8 +29,4 @@ unit: €
 periodicite: autre
 montant: 300
 link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafa
-teleservice:
-  name: redirection
-  query:
-    vers: ds?procedure=cd53-bafa
-skip_schema_check: true
+teleservicePrefill: ds?procedure=cd53-bafa
