Met à jour le formulaire de demande du pass Etudes de la région Grand Est

--- a/data/benefits/javascript/grand-est-passetudes.yml
+++ b/data/benefits/javascript/grand-est-passetudes.yml
@@ -24,4 +24,4 @@ type: bool
 unit: €
 periodicite: annuelle
 link: https://www.ter.sncf.com/grand-est/abonnements/tous-les-abonnements/abonnements-moins-26-ans/pass-etudes
-form: https://mmt.vsct.fr/sites/default/files/swt/CGRE/2022-07/2022%20formulaire%20demande%20de%20carte%20PASS%20ETUDES%20-%20version%20Imprimeur.pdf
+form: https://mmt.vsct.fr/sites/default/files/swt/CGRE/2023-07/2023%20formulaire%20demande%20de%20carte%20PASS%20ETUDES%20-%20version%20WEB.pdf
