--- a/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
@@ -6,7 +6,7 @@ description: L’Aide Régionale à l’Apprentissage (ARA) a pour objectif de
   d’équipement et de documentation professionnelle, de frais de transport, de
   restauration ou d’hébergement, etc.
 conditions:
-  - Être en formation d'apprentissage, inscrit ou inscrite en 2022-2023 en première année dans une
+  - Être inscrit ou inscrite en première année dans une
     formation de niveau 3, 4 et 5 délivrée dans un organisme de formation – centre de
     formation d’apprentis (OF-CFA) francilien.
   - Faire votre demande auprès de votre OF ou CFA.
