--- a/data/benefits/javascript/departement-corse-bourse-animazioni.yml
+++ b/data/benefits/javascript/departement-corse-bourse-animazioni.yml
@@ -1,4 +1,4 @@
-label: bourse Animazioni
+label: bourse Animazioni pour financer votre BAFA ou BNSSA
 institution: region_corse
 description: La bourse Animazioni prend en charge une partie du coût de la
   formation pour les Brevets d’Aptitude aux Fonctions d’Animateur et de
@@ -7,6 +7,8 @@ description: La bourse Animazioni prend en charge une partie du coût de la
 conditions:
   - Résider en Corse depuis 2 ans.
   - Déposer une demande écrite motivée.
+  - Être rattaché à un foyer dont le revenu fiscal de référence est inférieur
+    à 18 500 € par part fiscale.
   - Réaliser sa formation et ses stages d’approfondissement en Corse.
   - Suivre sa formation dans un organisme de formation habilité par décision du
     Ministre chargé de la jeunesse.
@@ -22,8 +24,8 @@ conditions_generales:
     values:
       - "94"
 profils: []
-link: https://www.isula.corsica/jeunesse/Bourse-Animazioni-300-pour-passer-ton-BAFA-ou-BNSSA_a269.html
-form: https://www.isula.corsica/jeunesse/attachment/2415565/
+link: https://www.ghjuventu.corsica/articles/CD4DC848-2F7B-45AD-B970-FDFFD414928E
+teleservice: https://www.ghjuventu.corsica/my/dashboard
 prefix: la
 type: float
 unit: €
