Met à jour l'éco-chèque mobilité de l'Occitanie pour retirer la mention à l'année 2023, replacée par la formulation année en cours.

--- a/data/benefits/javascript/region_occitanie-éco-chèque-mobilité-achat-d’une-voiture-électrique-ou-hybride-rechargeable-d’occasion.yml
+++ b/data/benefits/javascript/region_occitanie-éco-chèque-mobilité-achat-d’une-voiture-électrique-ou-hybride-rechargeable-d’occasion.yml
@@ -7,7 +7,7 @@ description: La Région Occitanie propose une aide financière pour toute person
   conversion de l'Etat, au titre de cette même voiture.
 conditions:
   - Avoir acheté votre voiture d’occasion (12 mois au moins) à compter du 1er janvier
-    2023, auprès d’un professionnel de la vente d’automobile exerçant son
+    de l'année en cours, auprès d’un professionnel de la vente d’automobile exerçant son
     activité sur le territoire de la Région.
   - Faire la demande dans les 6 mois suivants l’achat de votre voiture.
 conditions_generales:
