Actualise des aides qui contiennent la date "2022" dans le texte descriptif ou les liens (#4025)
* Met à jour l'aide régionale aux apprentis de l'Ile de France

* Met à jour la bourse de lycée : dates et nom du portail

* Met à jour la bourse de collège : dates et nom du portail

* Met à jour l'aide ordinateur de la région BFC

* Met à jour l'aide aux étudiants du sanitaire et social de la région occitanie : enlève la mention à l'année dans le texte et met à jour le montant maximal de l'aide qui a été revu à la hausse.

* Met à jour léco chèque mobilité de la région Occitanie dont les conditions ont évolué et joint le pdf 2023

* Met à jour le formulaire de demande du pass Etudes de la région Grand Est

* Met à jour l'aide de la réunion pour étudier au Québec : nouveau lien du formulaire et du pdf d'information

* Update region-ile-de-france-aide-apprentissage.yml

* Met à jour les 2 aides BAFA de la caf des Bouches du Rhône : général et approfondissement. Suppression des liens vers les formulaires de demande car il sont cassés sur le site de la Caf 13.

* Met à jour l'aide BAFA de la région Corse, qui a lancé une nouvelle plateforme dédiée aux aides pour les jeunes.

* Met à jour l'aide à la mobilité internationale de la région Corse, qui a lancé une nouvelle plateforme dédiée aux aides pour les jeunes.

* Corrige une coquille sur l'aide à la mobilité internationale de la Corse.

* Met à jour la bourse animazioni en intégrant le QF dans les conditions.

* Met à jour l'éco-chèque mobilité de l'Occitanie en intégrant le QF dans les conditions.

* Met à jour l'éco-chèque mobilité de l'Occitanie pour retirer la mention à l'année 2023, replacée par la formulation année en cours.

--- a/data/benefits/javascript/region-corse-bourse-a-la-mobilite-mobighjovani.yml
+++ b/data/benefits/javascript/region-corse-bourse-a-la-mobilite-mobighjovani.yml
@@ -1,4 +1,4 @@
-label: bourse à la mobilité Mobighjovani
+label: bourse à la mobilité internationale Mobighjovani
 institution: region_corse
 description: Grâce à la bourse Mobighjovani, profitez d'une aide financière qui
   vise à couvrir les frais non pris en charge dans les différents programmes de
@@ -6,6 +6,9 @@ description: Grâce à la bourse Mobighjovani, profitez d'une aide financière q
 conditions:
   - Résider en Corse depuis 2 ans.
   - Déposer une demande écrite motivée.
+  - participer à un projet de mobilité individuelle ou collective dans le cadre
+    d’Erasmus plus, Eurodyssée, Office Franco-Québécois pour la Jeunesse (OFQJ),
+    Office France-Allemand pour la Jeunesse (OFAJ) ou France Volontaires.
   - Ne pas avoir débuté son projet de mobilité au moment du dépôt de la
     candidature.
 conditions_generales:
@@ -23,8 +26,9 @@ conditions_generales:
     value: 18500
     period: year
 profils: []
-link: https://www.isula.corsica/jeunesse/Bourse-Mobighjovani-300-pour-les-jeunes-qui-souhaitent-voyager_a276.html
-instructions: https://www.isula.corsica/jeunesse/Bourse-Mobighjovani-300-pour-les-jeunes-qui-souhaitent-voyager_a276.html
+link: https://www.ghjuventu.corsica/articles/444E7A9F-9238-4011-9112-A87F95C51571
+instructions: https://www.ghjuventu.corsica/articles/444E7A9F-9238-4011-9112-A87F95C51571
+teleservice: https://www.ghjuventu.corsica/my/dashboard
 prefix: la
 type: float
 unit: €
