--- a/data/benefits/javascript/departement-corse-bourse-animazioni.yml
+++ b/data/benefits/javascript/departement-corse-bourse-animazioni.yml
@@ -1,4 +1,4 @@
-label: bourse Animazioni
+label: bourse Animazioni pour financer votre BAFA ou BNSSA
 institution: region_corse
 description: La bourse Animazioni prend en charge une partie du coût de la
   formation pour les Brevets d’Aptitude aux Fonctions d’Animateur et de
@@ -21,9 +21,13 @@ conditions_generales:
   - type: regions
     values:
       - "94"
+  - type: quotient_familial
+    operator: <
+    value: 18500
+    period: year
 profils: []
-link: https://www.isula.corsica/jeunesse/Bourse-Animazioni-300-pour-passer-ton-BAFA-ou-BNSSA_a269.html
-form: https://www.isula.corsica/jeunesse/attachment/2415565/
+link: https://www.ghjuventu.corsica/articles/CD4DC848-2F7B-45AD-B970-FDFFD414928E
+teleservice: https://www.ghjuventu.corsica/my/dashboard
 prefix: la
 type: float
 unit: €
